[B]Retrospect v5.7.18 - Changelog - 2024-09-29[/B]

Updated: Minor channel updates.

[B]Framework related[/B]
* Fixed: Logging out when no username is set.

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: SVT category listings broke (Fixes #1843).
* Fixed: TV4 API issues.
* Fixed: RegioGroei Broke.
* Fixed: Vier parsing (Fixes #1846).
* Fixed: TV4 Category listing (Fixes #1844).